maintainIT2/src/objects/Maintenance__c.object
<CustomObject>
    <description>Maintenance</description>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desc__c</fullName>
        <label>Desc</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Done__c</fullName>
        <label>Last Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Due__c</fullName>
        <label>Next Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Meter__c</fullName>
        <label>PM Meter</label>
        <picklist>
            <picklistValues>
                <fullName>Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Past Due</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Due Soon</fullName>
                <color>#FFCC66</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Maintenance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prev Maintenance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>